# teg-AI-POWERED-SOFTWARE-DEV-SP26

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TEAM-CONTRACT.md  conftest.py  pytest.ini
Lab-4/: GRADING-RUBRIC.md  QUICKSTART.md  README.md
Lab-5/: GRADING-RUBRIC.md  QUICKSTART.md  README.md
Lab-5/examples/fastapi-scaffold/: README.md  main.py  pyproject.toml
Lab-5/examples/fastapi-scaffold/models/: request_models.py
Lab-5/examples/fastapi-scaffold/routers/: ai_router.py
Lab-5/examples/fastapi-scaffold/services/: llm_service.py
Lab-6/: GRADING-RUBRIC.md  QUICKSTART.md  README.md
Lab-6/examples/mcp-server-python/: README.md  pyproject.toml  server.py
Lab-7/: GRADING-RUBRIC.md  QUICKSTART.md  README.md
Lab-7/examples/langgraph-starter/: README.md  graph.py  main.py  nodes.py  pyproject.toml  state.py
Lab-8/: GRADING-RUBRIC.md  QUICKSTART.md  README.md  SAFETY-AUDIT-BRIEF.md
Lab-9/: GRADING-RUBRIC.md  QUICKSTART.md  README.md
backend/: .dockerignore  Dockerfile  ai.py  app.py  db.py  episode_logger.py  mcp_server.py  railway.toml  requirements.txt  schema.sql
docs/: case-study.md  data-map.md  demo-day-fix-list.md  four-filters.md  repo-review-checklist.md  safety-audit.md
eval/: golden_set.json  run_eval.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
load/: .gitignore  load-test-report.md  locust_run_BEFORE_stats.csv  locust_run_stats.csv  locustfile.py  redteam_run.py
logs/: episode-log.jsonl  mcp-audit.jsonl
tests/: test_cross_user_isolation.py  test_prompt_injection.py
(+114 files in other folders)
