[project]
name = "capstone-mcp-server"
version = "1.0.0"
description = "MCP server exposing capstone tools — CS-AI-2025 Lab 6"
requires-python = ">=3.10"

dependencies = [
  "mcp>=1.0.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
